--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/"> WEB<span>Studio</span></a>
+        <a href="/"><span>WEB</span>Studio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -108,7 +108,7 @@
       </section>
     </main>
     <footer>
-      <a href="/"> WEB<span>Studio</span></a>
+      <a href="/"><span>WEB</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
