--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      </ul>
+      <h2 hidden>Contacts of Web Studio</h2>
+      <address>
+        <ul>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
@@ -27,7 +30,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <!-- <h2>Features<h2> -->
+        <h2 hidden>Our features<h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -60,15 +63,32 @@
         </ul>
       </section>
       <section>
-        <!-- what are we doing -->
+        <!-- What are we doing -->
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/work1.jpg" alt="monitor" width="360" /></li>
           <li>
-            <img src="./images/work2.jpg" alt="phone screen" width="360" />
+            <img
+              src="./images/work1.jpg"
+              alt="monitor"
+              width="360"
+              height="300"
+            />
           </li>
           <li>
-            <img src="./images/work3.jpg" alt="phone in hand" width="360" />
+            <img
+              src="./images/work2.jpg"
+              alt="phone screen"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/work3.jpg"
+              alt="phone in hand"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
@@ -79,14 +99,20 @@
           <li>
             <img
               src="./images/img1.jpg"
-              alt="man in shirt with beard"
+              alt="man in a shirt with a beard"
               width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="smiling man" width="264" />
+            <img
+              src="./images/img2.jpg"
+              alt="smiling man"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -95,12 +121,18 @@
               src="./images/img3.jpg"
               alt="girl in a pink sweater"
               width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img4.jpg" alt="man in a t-shirt" width="264" />
+            <img
+              src="./images/img4.jpg"
+              alt="man in a t-shirt"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
