--- a/index.html
+++ b/index.html
@@ -4,33 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title lang="ru">Studio</title>
+    <title>Studio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/"><span>WEB</span>Studio</a>
+        <a href=""><span>WEB</span>Studio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <h2 hidden>Contacts of Web Studio</h2>
-      <address>
-        <ul>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        </ul>
-      </address>
+      <!-- Contacts of Web Studio -->
+      <ul>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      </ul>
     </header>
     <main>
       <section>
-        <h1>Effective Solutions Your Business</h1>
+        <h1>Effective Solutions For Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2 hidden>Our features<h2>
+        <h2 hidden>Our features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -140,7 +138,7 @@
       </section>
     </main>
     <footer>
-      <a href="/"><span>WEB</span>Studio</a>
+      <a href=""><span>WEB</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
