--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <header>
       <nav>
-        <a href=""><span>WEB</span>Studio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
+        <a href="index.html"><span>WEB</span>Studio</a>
+        <address>
+          <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </address>
       </nav>
       <!-- Contacts of Web Studio -->
       <ul>
@@ -138,7 +140,7 @@
       </section>
     </main>
     <footer>
-      <a href=""><span>WEB</span>Studio</a>
+      <a href="index.html"><span>WEB</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
